--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -16,6 +16,7 @@ html{
 body{
   font-family: 'Open Sans', sans-serif;
   font-size: 2rem;
+  
 }
 .blue-bg{
   background-image: url(../img/mainBg2.svg);
@@ -52,7 +53,7 @@ h1{
   color: var(--white-collor)
 }
 .main-content{
-  max-width: 1200px;
+  max-width: 120rem;
   margin: 0 auto;
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -113,39 +114,142 @@ menu h1 a{
   padding-bottom: 0;
 }
 .img-class a h1 img{
-  width: 250px;
-  height: 70px;
+  width: 25rem;
+  height: 7rem;
 }
 .down{
   display: block;
 }
+.container-carrossel{
+  margin-top: 6.9rem;
+}
+.carousel-inner{
+  height: 50rem;
+}
+.slide-img1-ajuste{
+  background-image: url("../../assets/img/img1.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 10rem;
+}
+.slide-img2-ajuste{
+  background-image: url("../../assets/img/img2.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 10rem;
+}
+.slide-img3-ajuste{
+  background-image: url("../../assets/img/img3.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 10rem;
+}
+
+.carousel-control-prev-icon{
+  margin-left: 15rem;
+  background-color: #1f1a3b;
+  width: 5rem;
+  height: 10rem;
+}
+.carousel-control-next-icon{
+  
+  width: 5rem;
+  height: 10rem;
+}
 
 /*
   Slider
+  .container{
+    display: flex;
+    justify-content: center;
+  }
+  .slider{
+    padding-top: 10rem;
+    width: 120rem;
+    height: 60rem;
+    overflow: hidden;
+  }
+  .slides{
+    width: 100%;
+    height: 40rem;
+    display: flex;
+  }
+  .slides input{
+    display: none;
+  }
+  
+  .slide img{
+    width: 120rem;
+    height: 120%;
+  }
+  .manual-navigation{
+    position: absolute;
+    width: 120rem;
+    margin-top: 5rem;
+    display: flex;
+    justify-content: center;  
+  }
+  .manual-btn{
+     border: 2px solid #fff;
+     padding: 5px;
+     border-radius: 10px;
+     cursor: pointer;
+     transition: .5s;
+  }
+  .manual-btn:not(:last-child){
+    margin-right: 4rem;
+  }
+  .manual-btn:hover{
+    background-color: #fff;
+  }
+  #radio1:checked ~ .first{
+    margin-left: 0;
+  }
+  #radio2:checked ~ .first{
+    margin-left: -100%;
+  }
+  #radio3:checked ~ .first{
+    margin-left: -200%;
+  }
+  #radio4:checked ~ .first{
+    margin-left: -300%;
+  }
+  .navigation-auto div{
+    border: 2px solid #000;
+    padding: 5px;
+    border-radius: 10px;
+  }
+  .navigation-auto{
+    position: absolute;
+    width: 120rem;
+    margin-top: 45rem;
+    display: flex;
+    justify-content: center;
+  }
+  .navigation-auto div:not(:last-child){
+    margin-right: 4rem;
+  }
+  #radio1:checked ~.navigation-auto .auto-btn1{
+    background-color: #fff;
+  }
+  #radio2:checked ~.navigation-auto .auto-btn2{
+    background-color: #fff;
+  }
+  #radio3:checked ~.navigation-auto .auto-btn3{
+    background-color: #fff;
+  }
+  #radio4:checked ~.navigation-auto .auto-btn4{
+    background-color: #fff;
+  }
+  
+  [data-component="slideshow"] .slide {
+    display: none;
+  }
+  
+  [data-component="slideshow"] .slide.active {
+    display: block;
+  }
 */
-.container{
-  display: flex;
-  justify-content: center;
-}
-.slider{
-  padding-top: 10rem;
-  width: 100rem;
-  height: 60rem;
-  overflow: hidden;
-}
-.slides{
-  width: 100%;
-  height: 400px;
-  display: flex;
-}
-.slides input{
-  display: none;
-}
-
-.slide img{
-  width: 100rem;
-  height: 100%;
-}
-.manual-navigation{
-  position: absolute;
-}
