--- a/src/views/index.html
+++ b/src/views/index.html
@@ -32,24 +32,25 @@
 
 
 <div class="container-carrossel main-content">
-
   <div id="carouselExampleIndicators" class="carousel slide">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
+
     <div class="carousel-inner">
-      <div class="carousel-item active slide-img1-ajuste h-100 w-120">
-        
+      <div class="carousel-item active h-100 w-120">
+        <img src="../../assets/img/img3.jpg" alt="">
       </div>
-      <div class="carousel-item slide-img2-ajuste h-100">
-        
+      <div class="carousel-item h-100">
+        <img src="../../assets/img/img6.jpg" alt="">
       </div>
-      <div class="carousel-item slide-img3-ajuste h-100">
-        
+      <div class="carousel-item h-100">
+        <img src="../../assets/img/img5.jpg" alt="">
       </div>
     </div>
+
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
@@ -59,6 +60,9 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+</div>
+<div class="section react-intro main-content">
+  <h1>O que é a react</h1>
 </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
