--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -72,6 +72,7 @@ h1{
   right: 0;
   width: 100%;
   border-bottom: 0.02px solid var(--light-gray-collor);
+  z-index: 1;
 }
 .menu h1{
   color: var(--primary-collor);
@@ -126,130 +127,23 @@ menu h1 a{
 .carousel-inner{
   height: 50rem;
 }
-.slide-img1-ajuste{
-  background-image: url("../../assets/img/img1.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  height: 10rem;
-}
-.slide-img2-ajuste{
-  background-image: url("../../assets/img/img2.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  height: 10rem;
-}
-.slide-img3-ajuste{
-  background-image: url("../../assets/img/img3.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  height: 10rem;
-}
-
 .carousel-control-prev-icon{
   margin-left: 15rem;
-  background-color: #1f1a3b;
   width: 5rem;
   height: 10rem;
 }
 .carousel-control-next-icon{
-  
+  margin-right: 15rem;
   width: 5rem;
   height: 10rem;
 }
-
-/*
-  Slider
-  .container{
-    display: flex;
-    justify-content: center;
-  }
-  .slider{
-    padding-top: 10rem;
-    width: 120rem;
-    height: 60rem;
-    overflow: hidden;
-  }
-  .slides{
-    width: 100%;
-    height: 40rem;
-    display: flex;
-  }
-  .slides input{
-    display: none;
-  }
-  
-  .slide img{
-    width: 120rem;
-    height: 120%;
-  }
-  .manual-navigation{
-    position: absolute;
-    width: 120rem;
-    margin-top: 5rem;
-    display: flex;
-    justify-content: center;  
-  }
-  .manual-btn{
-     border: 2px solid #fff;
-     padding: 5px;
-     border-radius: 10px;
-     cursor: pointer;
-     transition: .5s;
-  }
-  .manual-btn:not(:last-child){
-    margin-right: 4rem;
-  }
-  .manual-btn:hover{
-    background-color: #fff;
-  }
-  #radio1:checked ~ .first{
-    margin-left: 0;
-  }
-  #radio2:checked ~ .first{
-    margin-left: -100%;
-  }
-  #radio3:checked ~ .first{
-    margin-left: -200%;
-  }
-  #radio4:checked ~ .first{
-    margin-left: -300%;
-  }
-  .navigation-auto div{
-    border: 2px solid #000;
-    padding: 5px;
-    border-radius: 10px;
-  }
-  .navigation-auto{
-    position: absolute;
-    width: 120rem;
-    margin-top: 45rem;
-    display: flex;
-    justify-content: center;
-  }
-  .navigation-auto div:not(:last-child){
-    margin-right: 4rem;
-  }
-  #radio1:checked ~.navigation-auto .auto-btn1{
-    background-color: #fff;
-  }
-  #radio2:checked ~.navigation-auto .auto-btn2{
-    background-color: #fff;
-  }
-  #radio3:checked ~.navigation-auto .auto-btn3{
-    background-color: #fff;
-  }
-  #radio4:checked ~.navigation-auto .auto-btn4{
-    background-color: #fff;
-  }
-  
-  [data-component="slideshow"] .slide {
-    display: none;
-  }
-  
-  [data-component="slideshow"] .slide.active {
-    display: block;
-  }
-*/
+.carousel-inner img{
+  width: 100%;
+  height: 100%;
+  max-width: 120rem;
+  max-height: 80rem;
+}
+.react-intro{
+  display: flex;
+  justify-content: center;
+}
